--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,10 @@ dependencies:
 
   provider: any
 
-  firebase_core: ^0.4.0+9
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+5
+  firebase_core: ^1.0.3
+  firebase_analytics: ^7.1.1
+  firebase_auth: ^1.0.3
+  cloud_firestore: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
