--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   kotlin_flavor: ^0.2.0
+  horizontal_data_table: ^3.0.0
 
 dev_dependencies:
   flutter_test:
