--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   kotlin_flavor: ^0.2.0
   horizontal_data_table: ^3.0.0
+  qr_code_scanner: ^0.4.0
 
 dev_dependencies:
   flutter_test:
